--- a/package.json
+++ b/package.json
@@ -28,7 +28,13 @@
     "istanbul": "^0.3.14",
     "karma": "^0.12.36",
     "karma-babel-preprocessor": "^5.2.1",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-ie-launcher": "^0.1.5",
     "karma-mocha": "^0.1.10",
-    "mocha": "^2.2.5"
+    "karma-phantomjs-launcher": "^0.2.0",
+    "karma-safari-launcher": "^0.1.1",
+    "mocha": "^2.2.5",
+    "phantomjs": "^1.9.17"
   }
 }
