--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,19 @@
 {
-    'ecmaFeatures': {
+    "ecmaFeatures": {
 		/* support for ECMAScript6 features */
-		/*'arrowFunctions': true,
-        'blockBindings': true,
-		'classes': true,
-		'defaultParams': true,
-        'forOf': true,*/
-        'jsx': true
+		/*"arrowFunctions": true,
+        "blockBindings": true,
+		"classes": true,
+		"defaultParams": true,
+        "forOf": true,*/
+        "jsx": true
     },
-	'parser': 'babel-eslint',
-    'rules':{
+	"parser": "babel-eslint",
+    "rules":{
 		// Possible Errors
 		"comma-dangle": 0,
-		"no-console": 2,
-		"no-debugger": 2,
+		"no-console": 1,
+		"no-debugger": 1,
 		"no-dupe-keys": 2,
 		"no-dupe-args": 2,
 		"no-empty": 2,
@@ -76,15 +76,15 @@
 		"no-new-require": 2,
 		"no-path-concat": 2,
 		// Stylistic Issues
-		"indent": [2, 4, {
-          "indentSwitchCase": true
-        }],
+//		"indent": [2, "tab", {
+//          "indentSwitchCase": true
+//        }],
 		"camelcase": 2,
 		"comma-spacing": [2, {"before": false, "after": true}],
 		"comma-style": [2, "last"],
 		"eol-last": 2,
 		"func-style": [2, "expression"],
-		"max-nested-callbacks": [2, 3],
+		"max-nested-callbacks": [2, 4],
 		"no-array-constructor": 2,
 		"no-mixed-spaces-and-tabs": 2,
 		"no-multiple-empty-lines": [1, {"max": 2}],
@@ -102,7 +102,7 @@
 		"space-after-function-name": [1, "never"],
 		"space-after-keywords": [1, "always"],
 		"space-before-blocks": [1, "always"],
-		"space-before-function-parentheses": [2, "always"],
+		"space-before-function-parentheses": [2, "never"],
 		"space-in-brackets": [1, "never"],
 		"space-in-parens": [1, "never"],
 		"space-infix-ops": 2,
@@ -112,7 +112,6 @@
 		"complexity": [1, 5],
 		"max-len": [2, 120],
 		"max-params": [1, 3],
-		"max-nested-callbacks": [2, 1],
 		// jsx rules
 		"react/jsx-boolean-value": 1,
 		"react/jsx-quotes": 1,
@@ -126,16 +125,16 @@
 		"react/self-closing-comp": 2,
 		"react/wrap-multilines": 1
     },
-	'env': {
-		'browser': true,
-		'node': true,
-		'mocha': true,
-		'es6': true
+	"env": {
+		"browser": true,
+		"node": true,
+		"mocha": true,
+		"es6": true
 	},
 	/* A globally-installed instance of ESLint can only use globally-installed ESLint plugins. */
 	/*A locally-installed ESLint can make sure of both . */
-	'plugins': [
+	"plugins": [
 		/* omit prefix */
-		'react'
+		"react"
 	]
 }
