--- a/package.json
+++ b/package.json
@@ -23,9 +23,16 @@
   "homepage": "https://github.com/jcsh4326/chaos",
   "devDependencies": {
     "babel": "^5.5.5",
+    "babel-eslint": "^3.1.14",
     "chai": "^3.0.0",
+    "cheerio": "^0.19.0",
+    "eslint": "^0.22.1",
+    "eslint-plugin-react": "^2.5.0",
     "gulp": "^3.9.0",
+    "gulp-eslint": "^0.13.2",
+    "gulp-mocha": "^2.1.1",
     "istanbul": "^0.3.14",
+    "jsdom": "^5.4.3",
     "karma": "^0.12.36",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-chrome-launcher": "^0.1.12",
@@ -35,6 +42,7 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-safari-launcher": "^0.1.1",
     "mocha": "^2.2.5",
-    "phantomjs": "^1.9.17"
+    "phantomjs": "^1.9.17",
+    "react": "^0.13.3"
   }
 }
