--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-mocha": "^2.1.1",
     "gulp-react": "^3.0.1",
     "istanbul": "^0.3.14",
+    "jquery": "^2.1.4",
     "jsdom": "^5.4.3",
     "karma": "^0.12.36",
     "karma-babel-preprocessor": "^5.2.1",
